--- a/configs/model/net_qty_model.yaml
+++ b/configs/model/net_qty_model.yaml
@@ -1,4 +1,4 @@
-_target_: model_new.NetQtyModel
+_target_: src.models.model_new.NetQtyModel
 
 lr: 1.380384264602885e-07
 
@@ -8,13 +8,13 @@ optimizer:
   weight_decay: 0.0
 
 encoder:
-  _target_: models.GNNEncoder
+  _target_: src.models.components.models.GNNEncoder
   hidden_channels: 64
   out_channels: 8
   num_layers: 2
 
 
 decoder:
-  _target_: models.EdgeDecoder
+  _target_: src.models.components.models.EdgeDecoder
   hidden_channels: 64
   out_channels: 8
