--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,14 +4,14 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - datamodule: mnist.yaml
-  - model: mnist.yaml
+  - datamodule: dailydata.yaml
+  - model: net_qty_model.yaml
   - callbacks: default.yaml
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
   - paths: default.yaml
-  - extras: default.yaml
-  - hydra: default.yaml
+#  - extras: default.yaml
+#  - hydra: default.yaml
 
   # experiment configs allow for version control of specific hyperparameters
   # e.g. best hyperparameters for given model and datamodule
