--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -6,17 +6,17 @@ defaults:
   - _self_
 
 model_checkpoint:
-  dirpath: ${paths.output_dir}/checkpoints
+  dirpath: ${oc.env:PROJECT_ROOT}/output_dir/checkpoints
   filename: "epoch_{epoch:03d}"
-  monitor: "val/acc"
-  mode: "max"
+  monitor: "val/epoch/loss"
+  mode: "min"
   save_last: True
   auto_insert_metric_name: False
 
 early_stopping:
   monitor: "val/step/loss"
-  patience: 100
-  mode: "max"
+  patience: 10
+  mode: "min"
 
 model_summary:
   max_depth: -1
