--- a/configs/callbacks/model_checkpoint.yaml
+++ b/configs/callbacks/model_checkpoint.yaml
@@ -4,12 +4,12 @@
 # Look at the above link for more detailed information.
 model_checkpoint:
   _target_: pytorch_lightning.callbacks.ModelCheckpoint
-  dirpath: null # directory to save the model file
-  filename: null # checkpoint filename
-  monitor: null # name of the logged metric which determines when model is improving
+  dirpath: ${oc.env:PROJECT_ROOT}/output_dir/checkpoints # directory to save the model file
+  filename: "epoch={epoch:04d}-validation.loss={validation/loss:.3f}" # checkpoint filename
+  monitor: "val/epoch/loss" # name of the logged metric which determines when model is improving
   verbose: False # verbosity mode
   save_last: null # additionally always save an exact copy of the last checkpoint to a file last.ckpt
-  save_top_k: 1 # save k best models (determined by above metric)
+  save_top_k: 3 # save k best models (determined by above metric)
   mode: "min" # "max" means higher metric value is better, can be also "min"
   auto_insert_metric_name: True # when True, the checkpoints filenames will contain the metric name
   save_weights_only: False # if True, then only the model’s weights will be saved
