--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -4,15 +4,17 @@
 root_dir: ${oc.env:PROJECT_ROOT}
 
 # path to data directory
-data_dir: ${paths.root_dir}/data/
+data_dir: ${oc.env:PROJECT_ROOT}/data/
 
 # path to logging directory
-log_dir: ${paths.root_dir}/lightning_logs/
+log_dir: ${oc.env:PROJECT_ROOT}/lightning_logs/
 
 # path to output directory, created dynamically by hydra
 # path generation pattern is specified in `configs/hydra/default.yaml`
 # use it to store all files generated during the run, like ckpts and metrics
-output_dir: ${hydra:runtime.output_dir}
+#output_dir: ${hydra:runtime.output_dir}
+output_dir: ${oc.env:PROJECT_ROOT}/output_dir
 
-# path to working directory
-work_dir: ${hydra:runtime.cwd}
+
+## path to working directory
+#work_dir: ${hydra:runtime.cwd}
